javadoc plugin in comments

--- a/pom.xml
+++ b/pom.xml
@@ -70,13 +70,13 @@
 
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.5.0</version>
-			</plugin>
-		</plugins>
-	</reporting>
+<!--	<reporting>-->
+<!--		<plugins>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-javadoc-plugin</artifactId>-->
+<!--				<version>3.5.0</version>-->
+<!--			</plugin>-->
+<!--		</plugins>-->
+<!--	</reporting>-->
 </project>
